--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coin-web",
   "version": "0.1.0",
   "private": true,
+  "author": "CoinWars",
   "publishConfig": {
     "access": "public"
   },
@@ -15,6 +16,7 @@
   ],
   "dependencies": {
     "@craco/craco": "^6.4.5",
+    "@project-serum/anchor": "^0.25.0",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.0",
     "@solana/wallet-adapter-base": "^0.9.10",
     "@solana/wallet-adapter-react": "^0.15.9",
@@ -26,10 +28,13 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.22.3",
     "craco-less": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
@@ -37,19 +42,21 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.1",
     "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
+    "@types/node": "^18.6.5",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "process": "^0.11.10",
     "react-app-rewired": "^2.1.11",
     "react-scripts": "^5.0.0",
-    "source-map-loader": "^4.0.0"
+    "source-map-loader": "^4.0.0",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "browser": {
     "crypto": false,
     "stream": false
   },
   "scripts": {
+    "clean": "shx rm -rf dist .parcel-cache",
     "dev": "react-app-rewired start",
     "start": "craco start",
     "build": "craco build",
