--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.7.4",
+    "utf8": "^3.0.0",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
