update: wallet reassignment and calling for client functions.

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@solana/wallet-adapter-base": "^0.9.10",
     "@solana/wallet-adapter-react": "^0.15.9",
     "@solana/wallet-adapter-react-ui": "^0.9.12",
-    "@solana/wallet-adapter-wallets": "^0.17.1",
-    "@solana/web3.js": "^1.50.1",
+    "@solana/wallet-adapter-wallets": "^0.17.2",
+    "@solana/web3.js": "^1.52.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/bs58": "^4.0.1",
     "antd": "^4.22.3",
     "craco-less": "^2.0.0",
     "crypto-browserify": "^3.12.0",
